
The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting	 

------------------------------------------------------------------------------
??/??/14  richardjgowers, tyler.je.reddy

  * 0.8.2

  Enhancements

  * 2D streamplot code no longer uses deprecated matplotlib.nxutils module
  * core.distances.calc_angles and calc_torsions now accept an optional box argument
    to consider periodic boundary conditions in their calculation
    (Issue 172)
  * TopologyGroup angles and torsions methods both have a pbc flag, (default False)
    to toggle consideration of periodic boundaries


04/01/14  orbeckst, jandom, zhuyi.xue, xdeupi, tyler.je.reddy,
          manuel.nuno.melo, danny.parton, sebastien.buchoux, denniej0,
	  rmcgibbo, richardjgowers, lennardvanderfeltz, bernardin.alejandro
          matthieu.chavent

  * 0.8.1

  (Note: 0.8.0 contains a subset of these changes; 0.8.0 is deprecated)

  Enhancements

  * Named selections can now be passed to selectAtoms (Issue 174)
  * (experimental) MDAnalysis.visualization namespace added along with 
    2D/3D streamplot modules & documentation for them
  * TRR file handling is now fully aware of missing coordinate/velocity/force
    information when reading and writing frames.
  * MDAnalysis.analysis.contacts.ContactAnalysis1 run() method
    now allows trajectory slicing (Issue 161)
  * Merge AtomGroups into a new Universe (Issue 157)
  * TPR parser (currently limited to versions 58, 73 and 83 of the
    Gromacs TPR format (Gromacs 4.0 to 4.6.1), see Issue 2)
  * fast XTC seeking (Issue 127)
  * changing resid (set_resid()) or segid (set_segid()) changes the
    topology and lists of resids/segids can be assigned to 
    groups of objects (AtomGroup, ResidueGroup)